export type Arc = {
    label: string;
    value: number;
};